# bird-classifier

./: .gitignore  Bird-Species-Classifier_7.pptx  CLAUDE.md  README.md  app.py  project.md  pyproject.toml  requirements.txt  setup_check.py
docs/: crisp-dm.md  structure.md
notebooks/: bird_training.ipynb
src/: bird_data.py  build_dataset.py  cut_audio.py  yamnet_worker.py
testdaten/: README.md
