[project]
name = "bird-classifier"
version = "0.1.0"
description = "Vogelgesang-Klassifikator: Amsel, Kohlmeise, Rotkehlchen, Background"
requires-python = ">=3.11"
dependencies = [
    # Grundlagen
    "numpy",
    "pandas",
    "scikit-learn",
    # Visualisierung
    "matplotlib",
    "plotly",
    # Audio
    "librosa",
    "soundfile",
    # Machine Learning
    "torch",
    # Streamlit App
    "streamlit",
    # Xeno-Canto Download
    "requests",
    "tqdm",
    # YAMNet (Background-Erzeugung)
    "tensorflow",
    "tensorflow-hub",
    # BirdNET-Vergleich (Subprocess in app.py)
    "birdnetlib",
    # resampy: von birdnetlib benötigt (librosa.load mit res_type="kaiser_fast")
    "resampy",
    # Notebook Support
    "jupyterlab",
    "notebook",
    "ipykernel",
    # CSV / Excel Export
    "openpyxl",
]

[tool.uv]
package = false
